--- a/MAY-2017-NYC/lesson1/css/main.css
+++ b/MAY-2017-NYC/lesson1/css/main.css
@@ -2,6 +2,7 @@
 
 body {
 	margin: 42px 42px 0 42px;
+	transition: margin-top 400ms;
 }
 
 h1 {
@@ -14,10 +15,11 @@ h1 {
 }
 
 section {
-	height: 600px;
+	min-height: 600px;
 	/* height: 100vh; */
 	/*border: 1px solid black;*/
 	padding-top: 42px;
+	margin-top: -42px;
 }
 
 nav {
@@ -27,6 +29,7 @@ nav {
 	width: 100%;
 	top: 0;
 	left: 0;
+	z-index: 1;
 }
 
 nav ul {
@@ -42,4 +45,45 @@ nav li {
 
 nav li a {
 	text-decoration: none;
+}
+
+#menu-button {
+	position: fixed;
+	top: 0;
+	right: 0;
+	display: none;
+	border: none;
+	background: transparent;
+	font-size: 28px;
+	cursor: pointer;
+}
+
+.row div {
+	border: 1px solid black;
+	/* TODO remove this later */
+	height: 200px;
+}
+
+/* Mobile-only styles here */
+@media (max-width: 768px) {
+	#menu-button {
+		display: block;
+	}
+
+	nav {
+		display: none;
+	}
+
+	nav li {
+		display: block;
+	}
+
+	.move-down {
+		margin-top: 138px;
+	}
+
+	.move-down section {
+		padding-top: 138px;
+		margin-top: -138px;
+	}
 }
