--- a/MAY-2017-NYC/lesson1/css/main.css
+++ b/MAY-2017-NYC/lesson1/css/main.css
@@ -64,6 +64,13 @@ nav li a {
 	height: 200px;
 }
 
+#resume .row div {
+	margin-bottom: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .img-responsive {
 	width: 100%;
 }
